<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DS_fbStationSubRecipeStore" Id="{a748da66-9ea5-4aa0-9b90-8a3b781c2203}">
    <Declaration><![CDATA[TYPE DS_fbStationSubRecipeStore : (*Full Occupied Byte = 700*)
STRUCT

	bCopyPB : BOOL; (* Byte "n" *)
	sReservedBool : STRING(50); (* Byte "n+1~n+99" *)


	iSubRecipeNo : INT; (* Byte "n+100, n+101" *) (* 10 sets of Sub Recipe *)
	iCopyToSubRecipeNo : INT; (* Byte "n+102, n+103" *)
	sReservedInt : STRING(50); (* Byte "n+104~n+199" *)


	sSubRecipeDescription : STRING(50); (* Byte "n+200~n+299" *) (* Description of Sub Recipe - Naming*)


	DsSubRecipeMemory : DS_SubRecipeMemory; (* Byte "n+300 onward" *)





END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>